--- a/TPAPANACEA/ActivitySwitcher.xaml
+++ b/TPAPANACEA/ActivitySwitcher.xaml
@@ -18,8 +18,11 @@
         <Button HorizontalAlignment="Right" Name="btnClose"  Margin="0,4,5,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnClose_Click">
             <Image Width="30" Height="30" Source="Templates/Images/close.png" Stretch="Fill"/>
         </Button>
-        <Button HorizontalAlignment="Right" Name="btnHome" Margin="0,4,97,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnHome_Click">
+        <Button HorizontalAlignment="Right" Name="btnHome" Margin="0,4,127,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnHome_Click">
             <Image Width="30" Height="30" Source="Templates/Images/home.png" Stretch="Fill"/>
+        </Button>
+        <Button HorizontalAlignment="Right" Name="btnResult" Margin="0,4,97,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnResult_Click">
+            <Image Width="30" Height="30" Source="Templates/Images/result.png" Stretch="Fill"  />
         </Button>
         <Button HorizontalAlignment="Right" Name="btnLogin" Margin="0,4,67,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnLogin_Click">
             <Image Width="30" Height="30" Source="Templates/Images/login.png" Stretch="Fill"/>
@@ -27,7 +30,7 @@
         <Button HorizontalAlignment="Right" Name="btnMinimize" Margin="0,4,36,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnMinimize_Click">
             <Image Width="30" Height="30" Source="Templates/Images/min.png" Stretch="Fill"/>
         </Button>
-        <TextBlock Margin="8,8,131,0" Name="txtBlockAppTitle" VerticalAlignment="Top" Height="28" Text="Path Abroad Solutions" TextWrapping="Wrap" FontWeight="Bold" FontSize="16.667" Foreground="#FF2179AF"/>
+        <TextBlock Margin="8,8,161,0" Name="txtBlockAppTitle" VerticalAlignment="Top" Height="28" Text="Path Abroad Solutions" TextWrapping="Wrap" FontWeight="Bold" FontSize="16.667" Foreground="#FF2179AF"/>
 
     </Grid>
 </Window>
