--- a/TPAPANACEA/Templates/Common/Evaluate.xaml
+++ b/TPAPANACEA/Templates/Common/Evaluate.xaml
@@ -5,13 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TPAPanacea.Templates.Common"
         mc:Ignorable="d"
-        Title="Evaluate" Height="500" Width="400" WindowStartupLocation="CenterScreen"  ShowInTaskbar="False" WindowStyle="None" Topmost="False" Background="#20B2AA" AllowsTransparency="False" ResizeMode="NoResize">
+        Title="Evaluate" Height="600" Width="400" WindowStartupLocation="CenterScreen"  ShowInTaskbar="False" WindowStyle="None" Topmost="False" Background="#20B2AA" AllowsTransparency="False" ResizeMode="NoResize">
     <Grid>
         
         <Rectangle Fill="Teal" HorizontalAlignment="Stretch" Height="44" VerticalAlignment="Top" Name="rectHead" Stroke="Teal" Margin="0,0,0,0" />
-        <StackPanel Name="stkParams" Margin="0,50,0,0" HorizontalAlignment="Stretch" Orientation="Vertical">
-            
-        </StackPanel>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel Name="stkParams" Margin="0,50,0,0" HorizontalAlignment="Stretch" Orientation="Vertical" >
+
+            </StackPanel>
+        </ScrollViewer>
         <Button Name="btnSaveResults" HorizontalAlignment="Left" Margin="90,0,0,5" FontSize="14" FontWeight="Bold" Background="#339933" Foreground="White" Content="Submit" VerticalAlignment="Bottom" Click="btnSaveResults_Click" Width="100" Height="42"></Button>
         <Button Name="btnCancel" HorizontalAlignment="Right" Margin="0,0,90,5" FontSize="14" FontWeight="Bold" Background="#E8556E" Foreground="White" Content="Cancel" VerticalAlignment="Bottom" Click="btnCancel_Click" Width="100" Height="42"></Button>
         <Label Content="Evaluation Process" FontSize="14" FontWeight="Bold" Foreground="White" Height="28" HorizontalAlignment="Center" Margin="0,10,0,0" Name="lblHead" VerticalAlignment="Top"  />
